# openCV

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  alpha.cpp  basicDrawing.cpp  cFunction.cpp  cFunction.h  camShift.cpp  count_mat.cpp  create_mask.cpp  displayImage.cpp  distrans.cpp  draw.cpp  drawing.cpp  ffillldemo.cpp  imreadRaw.cpp  inputVideo.cpp  main.cpp  makefile  mat.cpp  operate.cpp  readPic.cpp  test.cpp  text_detection.cpp  waterShed.cpp
common/: cFunction.cpp  cFunction.h
cpp/: makefile
cpp/example_cmake/: .example.cpp.swp  CMakeLists.txt  Makefile  helloWorld.cpp  opencv_example
cpp/tutorial_code/: makefile
cpp/tutorial_code/core/: makefile
detectHarris/: cornerHarris.cpp  harris.cpp
facedetect/: facedetect.cpp
features2D/feature_detection/: SURF_detection.cpp
highGui/: basicLinerTransformsTrackbar.cpp
histogramsMatch/: calcHist.cpp  compareHist.cpp  equalizeHist.cpp  hsHist.cpp  matchTemplate.cpp
imageProcess/: CMakeLists.txt
imageProcess/basicDrawing/: draw.cpp  draw.h
imageProcess/image/: addImage.cpp  colorReduce.cpp  displayImage.cpp  image.cpp  readImg.cpp  regionOfInterest.cpp  splitMerge.cpp
imageProcess/mat/: mat.cpp  mat.h  mat1.cpp
imageSegmentation/: Segmentation.cpp  findOutline.cpp
imageTransformation/: alpha.cpp  canny.cpp  equalizehist.cpp  laplacian.cpp  remap.cpp  scharr.cpp  sobel.cpp  trans.cpp
mingw-build/: CMakeDownloadLog.txt  CMakeVars.txt  CPackConfig.cmake  CPackSourceConfig.cmake  OpenCVConfig.cmake  OpenCVModules.cmake  cmake_uninstall.cmake  download_with_curl.sh  download_with_wget.sh  opencv_data_config.hpp  opencv_python_config.cmake  opencv_tests_config.hpp  setup_vars_opencv4.cmd
mingw-build/include/opencv2/: cvconfig.h
mingw-build/install/: setup_vars_opencv4.cmd
mingw-build/modules/core/: arithm.simd_declarations.hpp  count_non_zero.simd_declarations.hpp  mathfuncs_core.simd_declarations.hpp  matmul.sse2.cpp  mean.simd_declarations.hpp  merge.avx2.cpp  merge.simd_declarations.hpp  split.simd_declarations.hpp  stat.simd_declarations.hpp  stat.sse4_2.cpp  sum.simd_declarations.hpp  version_string.inc
mingw-build/modules/features2d/: sift.simd_declarations.hpp
mingw-build/modules/imgproc/: accum.simd_declarations.hpp  bilateral_filter.sse2.cpp  (+7 more)
mingw64-opencv-build/mingw-build/: CMakeCache.txt  CMakeDownloadLog.txt  CMakeVars.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  OpenCVConfig.cmake  OpenCVModules.cmake  cmake_install.cmake  cmake_uninstall.cmake  download_with_curl.sh  download_with_wget.sh  opencv_data_config.hpp  opencv_python_config.cmake  opencv_python_tests.cfg  opencv_tests_config.hpp  version_string.tmp
myOpenCV.si4project/: myOpenCV.sip_sym  myOpenCV.sip_xab  myOpenCV.sip_xad  myOpenCV.sip_xc  myOpenCV.sip_xf  myOpenCV.sip_xm  myOpenCV.sip_xr  myOpenCV.sip_xsb  myOpenCV.sip_xsd  myOpenCV.siproj  myOpenCV.siwork
units/: units.cpp  units.h
(+868 files in other folders)
